--- a/inbox/AppV2/templates/dashboard/dashboard.html
+++ b/inbox/AppV2/templates/dashboard/dashboard.html
@@ -1,98 +1,9 @@
 <section>
     <div class="row">
-        <!---card 01-->
-        <div class="col-xl-3 col-sm-6 col-6 mb-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div class="align-self-center">
-                            <i class="fas fa-envelope-open-text fa-4x"></i>
-                        </div>
-                        <div>
-                            <h3>0</h3>
-                            <p class="mb-0">TOTAL</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    <!---card 02-->
-    <div class="col-xl-3 col-sm-6 col-6 mb-2">
-        <div class="card">
-            <div class="card-body">
-                <div class="d-flex justify-content-between">
-                    <div class="align-self-center">
-                        <i class="fas fa-envelope-open-text fa-4x"></i>
-                    </div>
-                    <div>
-                        <h3>0</h3>
-                        <p class="mb-0">READ</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-            <!---card 03-->
-            <div class="col-xl-3 col-sm-6 col-6 mb-2">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between">
-                            <div class="align-self-center">
-                                <i class="fas fa-mail-bulfa-4x"></i>
-                            </div>
-                            <div>
-                                <h3>0</h3>
-                                <p class="mb-0">UNREAD</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <!---card 04-->
-        <div class="col-xl-3 col-sm-6 col-6 mb-2">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <div class="align-self-center">
-                            <i class="fas fa-bell fa-4x"></i>
-                        </div>
-                        <div>
-                            <h3>0</h3>
-                            <p class="mb-0">TODAY</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% include 'dashboard/total.html' %}
+        {% include 'dashboard/read.html' %}
+        {% include 'dashboard/unread.html' %}
+        {% include 'dashboard/today.html' %}
+
     </div> <!--end row-->
 </section>
-
-<ul>
-    {% for client in clients %}
-        <li>{{ client.name }}</li>
-    {% endfor %}
-</ul>
-<h1>Backend Client Dashboard</h1>
-    <ul>
-        {% for client in clients %}
-            <li>{{ client.name }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'client_dashboard' %}">Create New Client</a>
-    <h1>Create New Client</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-        
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" required><br><br>
-        
-        <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone" required><br><br>
-        
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        
-        <input type="submit" value="Create Client">
-    </form>
