--- a/inbox/AppV2/static/css/style.css
+++ b/inbox/AppV2/static/css/style.css
@@ -52,6 +52,13 @@ body {
     font-size: 16px;
 
 }
+/*---# mixed parts---------------------------------------*/
+btn-modal {
+    width: 70px;
+}
+btn-action {
+    width: 45px;
+}
 /*---------------------------------------
 # Typed JS (Effect)
 ---------------------------------------*/
@@ -114,10 +121,14 @@ body {
 .swal-button {
     padding: 7px 19px;
     border-radius: 5px;
-    background: color #111;
     font-size: 12px;
     border: 1px solid #111;
 }
+
+.swal-button {
+    background-color: #111;
+}
+
 .swal-button:focus{
     /* remove border around button*/
     box-shadow: none;
@@ -131,7 +142,7 @@ body {
 
 /* Bootstrap form */
 .form-control:focus {
-    border-color: #093822;
+    border-color: #092538;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
@@ -149,6 +160,9 @@ body {
     border: #093822 !important;
     box-shadow: 0 0 8px rgba(1, 152, 117, 0.4) !important;
 }
+
 .form-switch .form-check-input:focus {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox= "0 0 20 20'%3e%3cpath fill='gray'/%3e%3c/svg%3e");"
+    background-image: url('data:image/svg+xml;charset=utf8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox= '0 0 20 20'%3e%3cpath fill='gray'/%3e%3c/svg%3e");
+
 }
+
