--- a/inbox/AppV2/templates/inbox.html
+++ b/inbox/AppV2/templates/inbox.html
@@ -13,12 +13,25 @@
 <i class="fas fa-envelope" style="color #8abaae;"></i>&nbsp;&nbsp; Inbox
 {% endblock nav-content %}
 
+<!---datatime (desktop mode)-->
+{% block datatime %}
+<div class="text-light" id="desk-datatime" style="font-size: 12px; margin-top: 5px;">{% now "l (m/d/Y)"%} &nbsp;
+    <span style="color:darkseagreen; font-weight: bold;" id="clock"></span>
+</div>
+{% endblock datatime %}
+
+<!--block sidebar-content-->
 {% block sidebar-content %}
-<a href="{%url 'logout'%}" class="btn btn-outline-danger btn-sm">Logout<a/>
-<a href="#" class="btn btn-outline-success btn-sm">Admin<a/>
+<center>
+    <!---welcome user-->
+    Welcome: <span class="txt-success">{{user.get_username}}</span>
+    <br><br>
+</center>
+<a class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a>
+<a href="{% url 'admin:index' %}" target="_blank" class="btn btn-outline-success btn-sm">Admin</a>
 {% endblock sidebar-content %}
 
-<!=== Page content ===>
+<!---Page content-->
 {%block content%}
 <br>
 <div class="container-fluid mt-3" style="width: 90%;">
@@ -34,13 +47,49 @@
         <div class="input-group input-group-sm mb-3">
             <input name="#" type="text" class="form-control input-sm" placeholder="Search for..." value="#">
             <button class="btn btn-secondary" title="Search"><i class="fas fa-search"></i></button>
-            <a href="{% url "inbox" %}" class="btn brn-dark" style="margin-left: 2px;"></a>
+            <a href="{% url 'inbox' %}" class="btn btn-dark" style="margin-left: 2px;" title="Refresh"><i class="fas fa-sync-alt"></i></a>
         </div>
     </form>
 
 
+    <!---Table to display messages-->
+    <div class="col-lg-12">
+        <div style="margin-top: 5px;">
+            <table class="table table-sm">
+                <thead class="table-success">
+                    <tr>
+                        <th style="width: 18%;">Name</th>
+                        <th style="width: 13%;">Phone</th>
+                        <th style="width: 18%;">Email</th>
+                        <th style="width: 18%;">Subject</th>
+                        <th style="width: 15%;">Received on</th>
+                        <th style="width: 10%;">Status</th>
+                        <th style="width:8% text-align: center;" colspan="2">Actions</th>
+                    </tr>
+                </thead>
+            <!--data from backend-->
+                <tr>
+                    <td>Name 1</td>
+                    <td>Phone 1</td>
+                    <td>Email 1</td>
+                    <td>Subject 1</td>
+                    <td>DataTime 1</td>
+                    <td>Status 1</td>
+                    <td>
+                        <button class="btn btn-secondary btn-sm btn-action" title="Delete message">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    </td>
+                    <td>
+                        <a class="btn text-light btn-sm btn-action" style="background-color: #2e2e2e;" title="Read message" href="#">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+        </div> 
+    </div>
 
-
-</div> <!--end//container-->
+</div><!----end//container-fluid--->
 
 {%endblock content%}
