--- a/inbox/AppV2/templates/registration/login.html
+++ b/inbox/AppV2/templates/registration/login.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 
 <!--Title on tab browser -->
-{%block title%}Login{%endblock title%}
+{% block title %}Login{% endblock title %}
 
+<!--block sidebar-content-->
 {% block sidebar-content %}
-<a href="{%url 'home'%}" class="btn btn-secondary">Home<a/>
+<a href="{%url 'home'%}" class="btn btn-secondary">Home</a>
 {% endblock sidebar-content %}
 
 <!=== Page content ===>
-{%block content%}
+{% block content %}
 
 <div class="container mt-5" id="card-login">
     <div class="card p-3 login-border">
@@ -19,7 +20,7 @@
                 <input type="text" class="form-control" name="username" placeholder="Username">
             </div>
             <div class="input-group mb-2">
-                <input type="current-password" class="form-control" id="password" placeholder="Password">
+                <input type="current-password" class="form-control" id="password" name="password" placeholder="Password">
             </div>
             <div class="form-check form-switch">
                 <input class="form-check-input" onclick="myFunction()" type="checkbox" style="float: right;">
@@ -34,4 +35,4 @@
         
     </div>
 </div> <!=== END // container ===>
-{%endblock content%}
+{% endblock content %}
