--- a/inbox/AppV2/templates/modals/message.html
+++ b/inbox/AppV2/templates/modals/message.html
@@ -43,7 +43,7 @@
             </h6>
             <hr>
             <div class="d-grid gap-2 mt-3">
-                <button class="btn text-light" type="sumbmit" style="background-color: #2e856e;"> Send message &nbsp;&nbsp;
+                <button class="btn text-light" type="submit" style="background-color: #2e856e;"> Send message &nbsp;&nbsp;
                     <i class="fas fa-paper-plane"></i>
                 </button>
             </div>
