--- a/inbox/AppV2/templates/base.html
+++ b/inbox/AppV2/templates/base.html
@@ -101,13 +101,24 @@
 
 
 
-<!=== Message from backend (login) ===>
+<!---MESSAGE BACKEND-->
 {% if form.errors%}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
     swal("Access Denied!" , "Enter Access Granting Credentials." , "info")
 </script>
 {% endif %}
+
+{% for message in messages %}
+    {% if message.tags == 'success' %}
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+        var m = "{{message}}";
+        swal("Success!", m , "success")
+    </script>
+    {% endif %}
+{% endfor %}
+
 
     <! === Bootstrap 5 JS === >
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>"
